--- a/main.html
+++ b/main.html
@@ -385,7 +385,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-db23ebf elementor-widget elementor-widget-image" data-id="db23ebf" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.10.0 - 09-01-2023 */
-.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>												<img decoding="async" src="https://erez-git.github.io/dogsmile/alonsh2.jpg" title="CD8A9096" alt="" loading="lazy" class="lazyloaded" data-ll-status="loaded">
+.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>												<img decoding="async" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/5eca1ddc01c2cb21b46694987d1755c5.jpg?cc=8&convert=webp&maxWidth=2080" title="CD8A9096" alt="" loading="lazy" class="lazyloaded" data-ll-status="loaded">
 
 															</div>
 				</div>
