--- a/main.html
+++ b/main.html
@@ -6,6 +6,12 @@
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<style>
+		#img-2 {
+			height: 100%;
+		}
+		.new-style-1 {
+			align-content: normal !important;
+		}
 		.what-you-get {
 			display: table !important;
     		width: 100% !important;
@@ -332,7 +338,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 </svg>		</div>
 					<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-7c42f27" data-id="7c42f27" data-element_type="column">
-			<div class="elementor-widget-wrap elementor-element-populated">
+			<div class="new-style-1 elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-398a74a elementor-widget elementor-widget-heading animated fadeInRight" data-id="398a74a" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;,&quot;_animation_delay&quot;:50}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.10.0 - 09-01-2023 */
@@ -385,7 +391,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-db23ebf elementor-widget elementor-widget-image" data-id="db23ebf" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.10.0 - 09-01-2023 */
-.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>												<img decoding="async" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/5eca1ddc01c2cb21b46694987d1755c5.jpg?cc=8&convert=webp&maxWidth=2080" title="CD8A9096" alt="" loading="lazy" class="lazyloaded" data-ll-status="loaded">
+.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>												<img id="img-2" decoding="async" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/5eca1ddc01c2cb21b46694987d1755c5.jpg?cc=8&convert=webp&maxWidth=2080" title="CD8A9096" alt="" loading="lazy" class="lazyloaded" data-ll-status="loaded">
 
 															</div>
 				</div>
