--- a/main.html
+++ b/main.html
@@ -666,7 +666,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-da48084 elementor-widget elementor-widget-image" data-id="da48084" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="290" height="300" src="https://erez-git.github.io/dogsmile/alonsh13.jpg" class="attachment-medium size-medium wp-image-994 lazyloaded" alt="">
+															<img loading="lazy" decoding="async" width="290" height="300" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/8f98d3f02f13bbe064e3f3fa895d9612.jpg" class="attachment-medium size-medium wp-image-994 lazyloaded" alt="">
 																													</div>
 				</div>
 					</div>
@@ -947,7 +947,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-f964af3 elementor-widget elementor-widget-image" data-id="f964af3" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="300" height="233" src="https://erez-git.github.io/dogsmile/alonsh43.jpg" class="attachment-medium size-medium wp-image-993 lazyloaded" alt="" data-ll-status="loaded">
+															<img loading="lazy" decoding="async" width="300" height="233" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/c0eebf6b356c7af278d0cfcc1785f491.jpg" class="attachment-medium size-medium wp-image-993 lazyloaded" alt="" data-ll-status="loaded">
 																													</div>
 				</div>
 					</div>
