--- a/main.html
+++ b/main.html
@@ -758,7 +758,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-2111a24 elementor-widget elementor-widget-image" data-id="2111a24" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="926" height="882" src="https://erez-git.github.io/dogsmile/alonsh63.jpg" class="attachment-large size-large wp-image-669 lazyloaded" alt="" data-ll-status="loaded">
+															<img loading="lazy" decoding="async" width="926" height="882" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/35033c12ba5bd26c8bb52ff6a8cab37d.png" class="attachment-large size-large wp-image-669 lazyloaded" alt="" data-ll-status="loaded">
 																													</div>
 				</div>
 					</div>
@@ -771,7 +771,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-56881c0 elementor-widget elementor-widget-image" data-id="56881c0" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="1024" height="975" src="https://erez-git.github.io/dogsmile/alonsh64.jpg" class="attachment-large size-large wp-image-670 lazyloaded" alt="" data-ll-status="loaded">
+															<img loading="lazy" decoding="async" width="1024" height="975" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/b4a207d1d0560eceae3244ccc5ef9fa3.png" class="attachment-large size-large wp-image-670 lazyloaded" alt="" data-ll-status="loaded">
 																													</div>
 				</div>
 					</div>
@@ -816,7 +816,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-18660c9 elementor-widget elementor-widget-image" data-id="18660c9" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="1024" height="975" src="https://erez-git.github.io/dogsmile/alonsh65.jpg" class="attachment-large size-large wp-image-672 lazyloaded" alt="" data-ll-status="loaded">
+															<img loading="lazy" decoding="async" width="1024" height="975" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/42564618ccede1049985c6aed507b90c.png" class="attachment-large size-large wp-image-672 lazyloaded" alt="" data-ll-status="loaded">
 																													</div>
 				</div>
 					</div>
@@ -829,7 +829,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-3ae253c elementor-widget elementor-widget-image" data-id="3ae253c" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="2343" height="2292" src="https://erez-git.github.io/dogsmile/alonsh66.jpg" class="attachment-full size-full wp-image-395 lazyloaded" alt="" data-ll-status="loaded">
+															<img loading="lazy" decoding="async" width="2343" height="2292" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/4be3de5bce4e59a8f7ec995f97b2716b.png" class="attachment-full size-full wp-image-395 lazyloaded" alt="" data-ll-status="loaded">
 																													</div>
 				</div>
 					</div>
