--- a/main.html
+++ b/main.html
@@ -519,7 +519,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-88b8cbc elementor-widget elementor-widget-image" data-id="88b8cbc" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img fetchpriority="high" decoding="async" width="300" height="234" src="https://erez-git.github.io/dogsmile/alonsh1.jpg" title="" alt="" class="attachment-medium size-medium wp-image-995 lazyloaded" alt="" sizes="(max-width: 300px) 100vw, 300px" data-ll-status="loaded">
+															<img fetchpriority="high" decoding="async" width="300" height="234" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/78d5bf0c4325eeb58072f14b8dc3739d.png" title="" alt="" class="attachment-medium size-medium wp-image-995 lazyloaded" alt="" sizes="(max-width: 300px) 100vw, 300px" data-ll-status="loaded">
 																													</div>
 				</div>
 					</div>
@@ -616,7 +616,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-fc762b1 elementor-widget elementor-widget-image" data-id="fc762b1" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img decoding="async" width="225" height="300" src="https://erez-git.github.io/dogsmile/alonsh8.jpg" class="attachment-medium size-medium wp-image-1009 lazyloaded" alt="" data-ll-status="loaded">
+															<img decoding="async" width="225" height="300" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/98d51a4063be8e3d4918ab0d664422f6.jpg" class="attachment-medium size-medium wp-image-1009 lazyloaded" alt="" data-ll-status="loaded">
 																													</div>
 				</div>
 					</div>
