--- a/main.html
+++ b/main.html
@@ -702,11 +702,14 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-ab90bca elementor-headline--style-highlight elementor-widget elementor-widget-animated-headline animated fadeInUp" data-id="ab90bca" data-element_type="widget" data-settings="{&quot;marker&quot;:&quot;double_underline&quot;,&quot;highlighted_text&quot;:&quot;\&quot;\u05d2\u05d5\u05e8 \u05de\u05d7\u05d5\u05e0\u05da \u05d14 \u05e9\u05d1\u05d5\u05e2\u05d5\u05ea\&quot;&quot;,&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:200,&quot;headline_style&quot;:&quot;highlight&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;highlight_animation_duration&quot;:1200,&quot;highlight_iteration_delay&quot;:8000}" data-widget_type="animated-headline.default">
 				<div class="elementor-widget-container">
 					<h3 class="elementor-headline e-animated">
-				<span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
-					<span class="elementor-headline-dynamic-text elementor-headline-text-active">"גור מחונך ב4 שבועות"</span>
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 150" preserveAspectRatio="none"><path d="M5,125.4c30.5-3.8,137.9-7.6,177.3-7.6c117.2,0,252.2,4.7,312.7,7.6"></path><path d="M26.9,143.8c55.1-6.1,126-6.3,162.2-6.1c46.5,0.2,203.9,3.2,268.9,6.4"></path></svg></span>
-				</h3>
+						<span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
+							<span class="elementor-headline-dynamic-text elementor-headline-text-active">"גור מחונך ב4 שבועות"</span>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 150" preserveAspectRatio="none"><path d="M5,125.4c30.5-3.8,137.9-7.6,177.3-7.6c117.2,0,252.2,4.7,312.7,7.6"></path><path d="M26.9,143.8c55.1-6.1,126-6.3,162.2-6.1c46.5,0.2,203.9,3.2,268.9,6.4"></path></svg></span>
+					</h3>
 				</div>
+					<div>
+						<img decoding="async" width="225" height="300" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/4be4c3aac02509cc185c4110ca5c3329.png" class="attachment-medium size-medium wp-image-1009 lazyloaded" alt="" data-ll-status="loaded">
+					</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-69e9b22 elementor-section-boxed elementor-section-height-default elementor-section-height-default animated fadeInUp" data-id="69e9b22" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInUp&quot;,&quot;animation_delay&quot;:250}">
 						<div class="elementor-container elementor-column-gap-default">
