--- a/main.html
+++ b/main.html
@@ -75,11 +75,11 @@
 		}
 		.fa-angle-up:before {
             content: "\f106";
-			color: rgb(251, 136, 70);
+			color: #fb82b7;
         }
 		.fa-angle-down:before {
 			content: "\f107";
-			color: rgb(251, 136, 70);
+			color: #fb82b7;
 		}
 
 		.elementor-tab-content {
