--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<style>
 		#img-2 {
-			height: 100%;
+			height: 500px;
+		}
+		#img-2-container {
+			align-items: center;
 		}
 		.new-style-1 {
 			align-content: normal !important;
@@ -385,7 +388,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				</div>
 					</div>
 		</div>
-				<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-1e4804a" data-id="1e4804a" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+				<div id="img-2-container" class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-1e4804a" data-id="1e4804a" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-db23ebf elementor-widget elementor-widget-image" data-id="db23ebf" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
