--- a/main.html
+++ b/main.html
@@ -12,6 +12,10 @@
 		#img-2-container {
 			align-items: center;
 		}
+		#first-section-container {
+			display: flex;
+			justify-content: center;
+		}
 		.new-style-1 {
 			align-content: normal !important;
 		}
@@ -361,7 +365,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<style>/*! elementor - v3.10.0 - 09-01-2023 */
 .elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:#818a91;color:#fff}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap{color:#818a91;border:3px solid;background-color:transparent}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap{margin-top:8px}.elementor-widget-text-editor:not(.elementor-drop-cap-view-default) .elementor-drop-cap-letter{width:1em;height:1em}.elementor-widget-text-editor .elementor-drop-cap{float:right;text-align:center;line-height:1;font-size:50px}.elementor-widget-text-editor .elementor-drop-cap-letter{display:inline-block}</style>				<p>תכנית דיגיטלית שלא נראתה בארץ, שתעזור לך לאלף את הגור שלך בעצמך.<br>לשים סוף לצרכים בבית, הנשיכות המציקות, ההרס, הבכי בכלוב, להכחיד כל התנהגות מתסכלת ולקבל את הכלב החלומי שתמיד רצית!</p><p><span style="font-size: 12pt;">(מבלי להיות תלוי במאלפים ולבזבז זמן והון על שיעורים שלא נגמרים…)</span></p>						</div>
 				</div>
-				<div class="elementor-element elementor-element-09cfe29 elementor-mobile-align-center elementor-widget elementor-widget-button animated fadeInRight" data-id="09cfe29" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;,&quot;_animation_delay&quot;:200}" data-widget_type="button.default">
+				<div id="first-section-container" class="elementor-element elementor-element-09cfe29 elementor-mobile-align-center elementor-widget elementor-widget-button animated fadeInRight" data-id="09cfe29" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;,&quot;_animation_delay&quot;:200}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
 			<a href="#contact" class="elementor-button-link elementor-button elementor-size-md" role="button">
