--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<style>
 		#img-2 {
-			height: 500px;
+			height: 400px;
+    		width: 400px;
+			clip-path: circle(50%);
 		}
 		#img-2-container {
 			align-items: center;
