--- a/main.html
+++ b/main.html
@@ -1456,8 +1456,10 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-eea89cd elementor-widget elementor-widget-heading" data-id="eea89cd" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">116 ש"ח 
-בלבד X 3 תשלומים קלילים</h2>		</div>
+<h2 dir="rtl" class="elementor-heading-title elementor-size-default">
+  116 ש״ח בלבד <span style="display: inline-block; direction: ltr;">X</span> 3 תשלומים קלילים
+</h2>
+				</div>
 				</div>
 				<div class="elementor-element elementor-element-a91f5cd elementor-headline--style-highlight elementor-widget elementor-widget-animated-headline animated fadeInUp" data-id="a91f5cd" data-element_type="widget" data-settings="{&quot;marker&quot;:&quot;underline_zigzag&quot;,&quot;highlighted_text&quot;:&quot;\u05d0\u05d5 348 \u05e9\&quot;\u05d7 \u05d1\u05ea\u05e9\u05dc\u05d5\u05dd \u05d0\u05d7\u05d3.&quot;,&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:100,&quot;headline_style&quot;:&quot;highlight&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;highlight_animation_duration&quot;:1200,&quot;highlight_iteration_delay&quot;:8000}" data-widget_type="animated-headline.default">
 				<div class="elementor-widget-container">
