--- a/main.html
+++ b/main.html
@@ -1457,7 +1457,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-eea89cd elementor-widget elementor-widget-heading" data-id="eea89cd" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 <h2 dir="rtl" class="elementor-heading-title elementor-size-default">
-  116 ש״ח בלבד <span style="display: inline-block; direction: ltr;">X</span> 3 תשלומים קלילים
+  116 ש״ח בלבד <span style="display: inline-block; direction: ltr; text-decoration: underline;">X</span> 3 תשלומים קלילים
 </h2>
 				</div>
 				</div>
