--- a/main.html
+++ b/main.html
@@ -1420,12 +1420,12 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 						<div class="elementor-container elementor-column-gap-default">
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-d882772" data-id="d882772" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
-								<div class="elementor-element elementor-element-df6cbc2 elementor-headline--style-highlight elementor-widget elementor-widget-animated-headline animated fadeInUp" data-id="df6cbc2" data-element_type="widget" data-settings="{&quot;marker&quot;:&quot;x&quot;,&quot;highlighted_text&quot;:&quot;5980 \u05e9\&quot;\u05d7&quot;,&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:100,&quot;headline_style&quot;:&quot;highlight&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;highlight_animation_duration&quot;:1200,&quot;highlight_iteration_delay&quot;:8000}" data-widget_type="animated-headline.default">
+								<div class="elementor-element elementor-element-df6cbc2 elementor-headline--style-highlight elementor-widget elementor-widget-animated-headline animated fadeInUp" data-id="df6cbc2" data-element_type="widget" data-widget_type="animated-headline.default">
 				<div class="elementor-widget-container">
 					<h3 class="elementor-headline e-animated">
 					<span class="elementor-headline-plain-text elementor-headline-text-wrapper">שווי הקורס + הבונוסים+ הליווי הוא: </span>
 				<span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
-					<span class="elementor-headline-dynamic-text elementor-headline-text-active">5980 ש"ח</span>
+					<span class="elementor-headline-dynamic-text elementor-headline-text-active">6960 ש"ח</span>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 150" preserveAspectRatio="none"><path d="M497.4,23.9C301.6,40,155.9,80.6,4,144.4"></path><path d="M14.1,27.6c204.5,20.3,393.8,74,467.3,111.7"></path></svg></span>
 				</h3>
 				</div>
