--- a/main.html
+++ b/main.html
@@ -989,7 +989,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-53e0062 elementor-widget elementor-widget-spacer" data-id="53e0062" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-spacer">
-			<div class="elementor-spacer-inner"></div>
+			<div class="elementor-spacer-inner"><img src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/8375fd184430b7a2cab4a4dcb4d6d1bf.png"></img></div>
 		</div>
 				</div>
 				</div>
@@ -1012,7 +1012,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-c2551a9 elementor-widget elementor-widget-spacer" data-id="c2551a9" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-spacer">
-			<div class="elementor-spacer-inner"></div>
+			<div class="elementor-spacer-inner"><img src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/6be969415101e49af04dc12b4acbb0eb.png"></img></div>
 		</div>
 				</div>
 				</div>
@@ -1035,7 +1035,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-80f2828 elementor-widget elementor-widget-spacer" data-id="80f2828" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-spacer">
-			<div class="elementor-spacer-inner"></div>
+			<div class="elementor-spacer-inner"><img src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/12b2f18edfd6bd1f8c4045e15114ff44.png"></img></div>
 		</div>
 				</div>
 				</div>
@@ -1061,7 +1061,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-a4e3d72 elementor-widget elementor-widget-spacer" data-id="a4e3d72" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-spacer">
-			<div class="elementor-spacer-inner"></div>
+			<div class="elementor-spacer-inner"><img src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/5aa894e57a45d817cb934bb269fa7e0f.png"></img></div>
 		</div>
 				</div>
 				</div>
@@ -1084,7 +1084,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-4217a5c elementor-widget elementor-widget-spacer" data-id="4217a5c" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-spacer">
-			<div class="elementor-spacer-inner"></div>
+			<div class="elementor-spacer-inner"><img src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/fe1c9965ee98e61c57c726677e92ca60.png"></img></div>
 		</div>
 				</div>
 				</div>
@@ -1107,7 +1107,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 								<div class="elementor-element elementor-element-3da21db elementor-widget elementor-widget-spacer" data-id="3da21db" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-spacer">
-			<div class="elementor-spacer-inner"></div>
+			<div class="elementor-spacer-inner"><img src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/dc1af34a35d97713a14f7de1a14e3069.png"></img></div>
 		</div>
 				</div>
 				</div>
