--- a/main.html
+++ b/main.html
@@ -620,7 +620,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-aa9e70a elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="aa9e70a" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
-					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-bd0e7bb" data-id="bd0e7bb" data-element_type="column">
+					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-bd0e7bb animated fadeInUp" data-id="bd0e7bb" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-fc762b1 elementor-widget elementor-widget-image" data-id="fc762b1" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
