--- a/main.html
+++ b/main.html
@@ -1539,61 +1539,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-48cffe8 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default flex-center" data-id="48cffe8" data-element_type="section" id="pay">
 						<div class="elementor-container elementor-column-gap-default flex-center-child">
 					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-21b924f" data-id="21b924f" data-element_type="column">
-			<div class="elementor-widget-wrap elementor-element-populated">
-								<div class="elementor-element elementor-element-27c6638 elementor-widget elementor-widget-html" data-id="27c6638" data-element_type="widget" id="tofes" data-widget_type="html.default">
-				<div class="elementor-widget-container">
-
-
-<style type="text/css">  </style>   <div id="content">  <div class=" multyparent bodyarea_multyelements">  <div class="inner_bodyarea_multyelements">  <div class="uniqueid_100003 t0 t2215 t2419399 multyserial  multy name_embeddedFormContainer sonof_ sonof_name_ after_ after_name_ before_ before_name_ display_tag_embeddedFormContainer-simple-inherited paddingInOutsideMulty scss_effect_enabled_mouse_over_button" id="100003"> <div class="ravxx_backgroundSpace">
-<div class="ravxx_backgroundSpaceInner">
-<div class="backgroundSpace">
-</div>
-</div>
-</div>
-  <div class="multyinner">  <div class=" multyparent multyelements">  <div class="uniqueid_100002 t0 t2215 t2419399 multyserial  multy name_serial name_serial-form_container sonof_multyserial after_ after_name_ before_ before_name_ scss_effect_enabled_mouse_over_button" id="100002"> <div class="ravxx_backgroundSpace">
-<div class="ravxx_backgroundSpaceInner">
-<div class="backgroundSpace">
-</div>
-</div>
-</div>
-  <div class="multyinner">  <div class=" multyparent multyelements">  <div role="heading" aria-level="1" class="uniqueid_100019 t0 t2215 t2419399 multytext  multy name_text name_text-title_assistant name_text-title_assistant-inherited sonof_multyserial sonof_name_serial-form_container after_ after_name_ before_multyform before_name_form display_tag_multy_text_regular scss_effect_enabled_mouse_over_button" id="100019"> <div class="ravxx_backgroundSpace">
-<div class="ravxx_backgroundSpaceInner">
-<div class="backgroundSpace">
-</div>
-</div>
-</div>
-  <div class="multyinner"> <p><span style="color:#000000 !important;color:var(--mobile-override-color,#000000) !important;">מלאי עכשיו את הפרטים שלך, לחץ על כפתור ההרשמה וקבלי במיידי גישה לקורס ישירות אלייך למייל ב95% הנחה!&ZeroWidthSpace;</span></p> </div>  </div>  <div data-responsive_settings="range(0,292) {{{
-enableAutoScaler({targetWidth:292});
-}}}
-range(293,10000) {{{
-disableAutoScaler();
-}}}" class="uniqueid_100023 t0 t2215 t2419399 multyform multy name_form name_form-vertical_square name_form-vertical_square-green_labelsout sonof_multyserial sonof_name_serial-form_container after_multytext after_name_text-title_assistant-inherited after_name_text before_ before_name_ display_tag_multyform_verticalform md5_1 scss_effect_enabled_mouse_over_button" id="100023" data-responsive-content-width="309/439"> <div class="ravxx_backgroundSpace">
-<div class="ravxx_backgroundSpaceInner">
-<div class="backgroundSpace">
-</div>
-</div>
-</div>
-  <div class="multyinner">  <div data-form_view_setting="label_no_placeholder" class="formBody scaleRoot " data-handle-scss-effect-mouse_over_form="{&quot;type&quot;:&quot;mousemove&quot;}"> <form field-count="3" class="form scaleContentDimensions" data-slow_loading_caption="מבצעים הרשמה" action="https://safe-subscriber.responder.live/" method="post" novalidate="novalidate">   <div class=" multyparent multyfields">  <div class="inner_multyfields">  <div class="uniqueid_100021 t0 t2215 t2419399 multyfield  multy name_ sonof_multyform after_ after_name_ before_multyfield scss_effect_enabled_mouse_over_button multyfield_type_id_name" id="100021"> <div class="ravxx_backgroundSpace">
-<div class="ravxx_backgroundSpaceInner">
-<div class="backgroundSpace">
-</div>
-</div>
-</div>
-  <div class="multyinner">  <div class="fieldData_type_id__name field fieldname_subscribers_name fieldtype_name nolabel" data-handle-scss-effect-mouse_over_field="{&quot;type&quot;:&quot;mousemove&quot;}"> <div class="label"> <span>שם מלא</span> </div> <input aria-label="שם מלא" name="fields[13_Fixed]" caption="fields[שם מלא]" type="text" maxlength="80" placeholder="" value=""> </div> </div>  </div>  <div class="uniqueid_100020 t0 t2215 t2419399 multyfield  multy name_ sonof_multyform after_multyfield before_multyfield scss_effect_enabled_mouse_over_button multyfield_type_id_email" id="100020"> <div class="ravxx_backgroundSpace">
-<div class="ravxx_backgroundSpaceInner">
-<div class="backgroundSpace">
-</div>
-</div>
-</div>
-  <div class="multyinner">  <div class="fieldData_type_id__email field fieldname_subscribers_email fieldtype_email nolabel" data-handle-scss-effect-mouse_over_field="{&quot;type&quot;:&quot;mousemove&quot;}"> <div class="label"> <span>כתובת אימייל</span> <span class="mandatoryfield"></span> </div> <input aria-label="כתובת אימייל" name="fields[1_Fixed]" caption="fields[כתובת אימייל]" type="text" maxlength="255" placeholder="" class=" required ascii_email" value=""> </div> </div>  </div>  <div class="uniqueid_100022 t0 t2215 t2419399 multyfield  multy name_ sonof_multyform after_multyfield before_ before_name_ scss_effect_enabled_mouse_over_button multyfield_type_id_phone" id="100022"> <div class="ravxx_backgroundSpace">
-<div class="ravxx_backgroundSpaceInner">
-<div class="backgroundSpace">
-</div>
-</div>
-</div>
-  <div class="multyinner">  <div class="fieldData_type_id__phone field fieldname_subscribers_phone fieldtype_phone nolabel" data-handle-scss-effect-mouse_over_field="{&quot;type&quot;:&quot;mousemove&quot;}"> <div class="label"> <span>טלפון</span> </div> <input aria-label="טלפון" name="fields[2_Fixed]" caption="fields[טלפון]" type="tel" maxlength="40" placeholder="" class=" phone" value=""> </div> </div>  </div>  </div>  </div>     <div class=" multyparent multyhiddenfields">  <div class="inner_multyhiddenfields">  </div>  </div>   <div class="submitbuttonbox " data-slow_loading_caption="" data-template_id="" data-template-path="" "="">   <div class=" multyparent button_multyelements">  <div class="inner_button_multyelements">  </div>  </div>   <div class="submitButtonContainer_wrapper "><a href="#" data-handle-scss-effect-mouse_over_button="{&quot;type&quot;:&quot;mousemove&quot;}" class="submitButton submitButtonContainer text_button icon_right" data-button-type="text_button"> <button type="submit" class="textPart submitButton" name="none"> כאן לוחצים כדי לקבל סוף סוף את הכלב הנוח והקשוב שתמיד רצית! </button> </a></div> <div class="submitButtonContainer_wrapper ravxx_hover"><a href="#" data-handle-scss-effect-mouse_over_button="{&quot;type&quot;:&quot;mousemove&quot;}" class="submitButton submitButtonContainer text_button icon_right" data-button-type="text_button"> <button type="submit" class="textPart submitButton" name="none"> כאן לוחצים כדי לקבל סוף סוף את הכלב הנוח והקשוב שתמיד רצית! </button> </a></div></div> <input type="hidden" name="__ravxx_url__" value="https://dogsmile4u.com/home/"> <input type="hidden" name="__ravxx_source_info__" value="{&quot;public_id&quot;:&quot;29ec08dce15ba982f60f6ea06360c959650D8F3B&quot;,&quot;normalized_url&quot;:&quot;http://form2.ravpage.co.il/29ec08dce15ba982f60f6ea06360c959650D8F3B&quot;,&quot;url&quot;:&quot;https://dogsmile4u.com/home/&quot;,&quot;group&quot;:&quot;8eb3df1a7f10d84960cefa691fbd07a3&quot;}"> <input type="hidden" name="form_id" value="30198"> <input type="hidden" name="encoding" value="utf-8"> <input type="hidden" name="ravxxc" value="29ec08dce15ba982f60f6ea06360c959650D8F3B:100023"> <input type="hidden" name="ravxxc_passthrough_domain" value="secure.cardcom.solutions"> <input type="hidden" name="__ravxx_captcha__" value="0cAFcWeA6WRATNSBgkR29DtbVKN0_btQnlkNGn1MFYkqoI_bZnZHZhv8DVQXINNDpH4WQ-7i_pfkfJ-FBy6b5tTkHVRkQfroT90mTwtUlgquFRV8iv3mBU2gwM7oRvaVve0youjqX_xvZZgIiO30RPskW557PEHYLR2n5yTgAW8i9SVZriQGX8GxZqOhHHzC9s_aO3qXgO-2pzFZdjsVFoOWV5p81BzDmXX9b9V3FBzaG2cOS7bRZ8KnchFJFSMSr3gGqniHqYfrEA8JJDTko1Sb5UbiW9f4JiUyHNlqtnLdsgD2QGtYg0Nls3ghm_siiMpH7n1sZiYlPgNNPQ5Y5V1zF33ecAu1-ydjkW-QgaoliwJo-GooIREWDZ5LtnMKSbXQ6IVbxy_Oyyn2BBI4Us2-13vJCEosU27AGuTuhyoeHwaA4IdKeAYQ4QYJ0NLb3qLdPzUOyzpIQrxgY5F9ucu1jtiqi2ZmFBnQNWvpATpe8RCpQphvMWPxAPPqk0Ufbr2LCYkqpeAcce-c5bRP9nokUqpivH3JoU68B1DmRPlq6RglDWmsKT0-xzeh5UA8seqSRaHJGQ-g4a87dbgM1lhfJJCJ25kkK2D_cvgrBz1GLjb8jIJMqQjO1BKXFlI1Agvd83Wd28Wthi79jBk3jBdaJjSjMlCAoj8U2F0UwG88f7Q9GrHGPr9mNafCleK9RPy3lZRbCTKdoj4iwK6Ja3iHzu9hoyziNr2Pe1N49E95FcH51mK6-i_ALVl24zyxowlufkqNj752brJcGW5DgCb6NoVlIhKpnuR9SpxnSComdTdrJZKRYt9v_5EIovc_2D0wq0LWAH_6h49GvtsUFAeolURauyrW1CnThl1OLyZzu44rr_97y9GVGHKmEUCxWHIc3ikLpTCiZirOeNC7FDZhkncpZ4azQYpmAM998sSexb4Jk7hvkz9ReeB71_L4r447jzuXwyPdvFREW_kbghXSjk1vZqlDFK-nNKxrb9HLGEdhkPEJFCIHDjL6BGdyDMFGafxLKAgz5R7Wo-VAPCBI_xHLJGXsCIcBAMIMR8ishb56Cwco307mTtmkh7a6_Ho28D7TWRM7mrPRG7DRP9dZ_FvCGiIxD2PG2nTRVpg7sSeupcxiY4or6-FDqBPDMOOA8fF8Rn7OpILwK7lQJYFdzZZOSg6CXK_GTNxqWTT_Hx9BeF8DudfeNfRQvhG3OvzdhyIWHgjLQFBRUgYVie4EtWpGqF0i1XVRjAzm1YrJ65LjaXe7sVcp-zV9Lqn9CJuZC1LHWA1z0BOwSrzKxYMcz97-T9_S1FeFLOjwhjU2MsQCLR9-tTDaW-AAESD17QU4bx9UL_MirN9ljFrtGxIEquIDef-nYRssmv8RBqMIIQQdgP5fmT1xAWfLMzcjryyDtPQgD1CAY_wK7BqTfxo8fRCVUuN_uLP-yzZtitYVEqOGLOD_7yhIkgU1cOeMRbqxp3c5V7Ha-mrKgJGvd1PzWl9yv17irtn8zAqq8lOBOGE1etCkj46SQ3DiRcgZdtyYODf_rdf9-WRtGEGTjCLk57zXspCCj_RA"></form> <div class="clear"></div>  </div><!--ravxx_action_load_widget:form--> </div>  
-   </div>  </div>  </div>  </div>  </div>  </div>  </div>  </div>  </div>  </div> </div> 		</div>
-				</div>
+			<script type='text/javascript' src='//form2.ravpage.co.il/03f3adcdca0e08d05cef286450dfdf4669664876' charset='UTF-8'></script>
 					</div>
 		</div>
 				<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-7ced6c4" data-id="7ced6c4" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
