--- a/main.html
+++ b/main.html
@@ -1473,9 +1473,9 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-element elementor-element-f87ba6b elementor-button-success elementor-align-center tofes elementor-widget elementor-widget-button" data-id="f87ba6b" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://secure.cardcom.solutions/EA/EA5/sPF9QSRrEmZxNNQjHs1Jg/Intro" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="#contact" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">וואללה  אהבתי. אשמח להירשם 🙂</span>
+						<span class="elementor-button-text">וואלה אהבתי. אשמח להירשם 🙂</span>
 		</span>
 					</a>
 		</div>
