--- a/main.html
+++ b/main.html
@@ -1538,7 +1538,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-48cffe8 elementor-section-content-middle elementor-section-boxed elementor-section-height-default elementor-section-height-default flex-center" data-id="48cffe8" data-element_type="section" id="pay">
 						<div class="elementor-container elementor-column-gap-default flex-center-child">
-					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-21b924f" data-id="21b924f" data-element_type="column">
+					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-21b924f" style="width: 100%" data-id="21b924f" data-element_type="column">
 			<script type='text/javascript' src='//form2.ravpage.co.il/461c574c4d8ec2724f009ee25dbe020c6966A6C2' charset='UTF-8'></script>
 					</div>
 		</div>
