--- a/main.html
+++ b/main.html
@@ -576,7 +576,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 					<div class="elementor-button-wrapper">
 			<a href="#contact" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">נשמע מושלם! אני רוצה להירשם במבצע טרום קיץ לפני שיגמר</span>
+						<span class="elementor-button-text">נשמע מושלם! אשמח להירשם בהטבה שעומדת להסתיים</span>
 		</span>
 					</a>
 		</div>
