--- a/main.html
+++ b/main.html
@@ -759,13 +759,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 			<h2 class="elementor-heading-title elementor-size-default">מודול 1:  הבאת גור חדש הביתה - כיצד מתנהלים
 </h2>		</div>
 				</div>
-				<div class="elementor-element elementor-element-96eeaa0 elementor-widget elementor-widget-text-editor" data-id="96eeaa0" data-element_type="widget" data-widget_type="text-editor.default">
-				<div class="elementor-widget-container">
-							<p><span style="font-weight: 400;">איך לנהל </span><b>שגרה כמפתח להצלחה</b><span style="font-weight: 400;"> עם הגור. פה יש לך דגשים קטנים וחשובים שיכולים לעשות לכם שינוי עצום בהתנהלות בבית.</span></p><p><span style="font-weight: 400;">בנוסף יש את </span><b>עקרון התכנון המוקדם</b><span style="font-weight: 400;"> – עקרון קסם שיעזור לכם לנבא מתי לגור יש צרכים ולדעת להתנהל איתו בצורה מושלמת.</span></p><p><span style="font-weight: 400;">ועוד…</span></p>						</div>
-				</div>
-					</div>
-		</div>
-				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
+				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-9b2bff6 animated fadeInUp" style="width: 100%" data-id="9b2bff6" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-2111a24 elementor-widget elementor-widget-image" data-id="2111a24" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
@@ -774,6 +768,13 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				</div>
 					</div>
 		</div>
+				<div class="elementor-element elementor-element-96eeaa0 elementor-widget elementor-widget-text-editor" data-id="96eeaa0" data-element_type="widget" data-widget_type="text-editor.default">
+				<div class="elementor-widget-container">
+							<p><span style="font-weight: 400;">איך לנהל </span><b>שגרה כמפתח להצלחה</b><span style="font-weight: 400;"> עם הגור. פה יש לך דגשים קטנים וחשובים שיכולים לעשות לכם שינוי עצום בהתנהלות בבית.</span></p><p><span style="font-weight: 400;">בנוסף יש את </span><b>עקרון התכנון המוקדם</b><span style="font-weight: 400;"> – עקרון קסם שיעזור לכם לנבא מתי לגור יש צרכים ולדעת להתנהל איתו בצורה מושלמת.</span></p><p><span style="font-weight: 400;">ועוד…</span></p>						</div>
+				</div>
+					</div>
+		</div>
+				
 							</div>
 		</section>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-fa4cb5e elementor-section-content-middle elementor-reverse-mobile elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="fa4cb5e" data-element_type="section">
