--- a/main.html
+++ b/main.html
@@ -779,15 +779,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 		</section>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-fa4cb5e elementor-section-content-middle elementor-reverse-mobile elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="fa4cb5e" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
-					<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-8cc45f8 animated fadeInRight" data-id="8cc45f8" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
-			<div class="elementor-widget-wrap elementor-element-populated">
-								<div class="elementor-element elementor-element-56881c0 elementor-widget elementor-widget-image" data-id="56881c0" data-element_type="widget" data-widget_type="image.default">
-				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="1024" height="975" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/a266ad245b9545efdad1b808e04f54ad.png" class="attachment-large size-large wp-image-670 lazyloaded" alt="" data-ll-status="loaded">
-																													</div>
-				</div>
-					</div>
-		</div>
+					
 				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-b199e1a animated fadeInUp" data-id="b199e1a" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-334136f elementor-widget elementor-widget-heading" data-id="334136f" data-element_type="widget" data-widget_type="heading.default">
@@ -798,6 +790,15 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">מודול 2:  שיטות הקסם לגור המושלם</h2>		</div>
 				</div>
+				<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-8cc45f8 animated fadeInRight" style="height: 100%" data-id="8cc45f8" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
+			<div class="elementor-widget-wrap elementor-element-populated">
+								<div class="elementor-element elementor-element-56881c0 elementor-widget elementor-widget-image" data-id="56881c0" data-element_type="widget" data-widget_type="image.default">
+				<div class="elementor-widget-container">
+															<img loading="lazy" decoding="async" width="1024" height="975" src="https://images.ravpages.co.il/xsite_resources/user_content/cp_new_production/f1/ac/bc/4c/f1acbc4c50a94991eb21e4a7b7137c38/images/a266ad245b9545efdad1b808e04f54ad.png" class="attachment-large size-large wp-image-670 lazyloaded" alt="" data-ll-status="loaded">
+																													</div>
+				</div>
+					</div>
+		</div>
 				<div class="elementor-element elementor-element-d94c58f elementor-widget elementor-widget-text-editor" data-id="d94c58f" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
 							<p><b>תיחום </b><span style="font-weight: 400;">– כל מה שנוגע לתיחום ושימוש בגדר/כלוב.&nbsp;</span></p><p><span style="font-weight: 400;">למה צריך את זה? איך זה מסייע לכם?</span></p><p><span style="font-weight: 400;">ואיך עושים את זה הכי נכון וחכם ככה שהגור יאהב מאוד להיות שם ולא ירגיש חלילה שזה עונש או יבכה שם.</span></p><p><b>שיטות האכלה מתקדמות</b><span style="font-weight: 400;"> – אני מלמדת איך להשתמש במזון ככלי הכי יעיל לחינוך הכלב ולהפוך אותו משד קטן, בכיין ונשכן, לגור רגוע ונעים (קסם של ממש!)</span></p><p><b>&nbsp;טריק סודי</b><span style="font-weight: 400;"> – איך ללמד את הכלב ללכת לישון שינת ישרים, בזמן שאתם יוצאים לעבודה!! (או לכל מקום אחר).&nbsp;</span></p><p><span style="font-weight: 400;">&nbsp;בטוחה שלא שמעתם על זה בשום מקום.. באחריות.</span></p>						</div>
